k8s/supphakit-echoserver.yml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: sup-echoserver
#   labels:
#     app: echoserver
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: echoserver
#   template:
#     metadata:
#       labels:
#         app: echoserver
#     spec:
#       containers:
#       - name: echoserver
#         image: ealen/echo-server:latest
#         ports:
#         - containerPort: 3000
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: sup-echo-nodeport
# spec:
#   type: NodePort
#   selector:
#     app: echoserver
#   ports:
#     - protocol: TCP
#       port: 3000
#       targetPort: 3000
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: sup-ingress
#   annotations:
#     kubernetes.io/ingress.class: alb
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     # Health Check Settings
#     alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
#     alb.ingress.kubernetes.io/healthcheck-port: traffic-port
#     alb.ingress.kubernetes.io/healthcheck-path: /echo
#     alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
#     alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
#     alb.ingress.kubernetes.io/success-codes: '200'
#     alb.ingress.kubernetes.io/healthy-threshold-count: '2'
#     alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /echo
#         pathType: Prefix
#         backend:
#           service:
#             name: sup-echo-nodeport
#             port:
#               number: 3000

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sup-echo-app
  labels:
    app: sup-echo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sup-echo-app
  template:
    metadata:
      labels:
        app: sup-echo-app
    spec:
      containers:
      - name: sup-echo-app
        image: ealen/echo-server:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sup-echo-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: sup-echo-app
