k8s/supphakit-helloworld.yml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: sup-helloworld
#   labels:
#     app: helloworld
# spec:
#   replicas: 0
#   selector:
#     matchLabels:
#       app: helloworld
#   template:
#     metadata:
#       labels:
#         app: helloworld
#     spec:
#       containers:
#       - name: helloworld
#         image: tutum/hello-world:latest
#         ports:
#         - containerPort: 80

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sup-hello
  labels:
    app: sup-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sup-hello
  template:
    metadata:
      labels:
        app: sup-hello
    spec:
      containers:
      - name: sup-hello
        image: tutum/hello-world:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: sup-hello-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: sup-hello
