k8s/supphakit-ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: sup-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /echo
#         pathType: Prefix
#         backend:
#           service:
#             name: echo-clusip
#             port:
#               number: 80
#       - path: /hello
#         pathType: Prefix
#         backend:
#           service:
#             name: hello-clusip
#             port:
#               number: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: ingress-nodeport
# spec:
#   type: NodePort
#   selector:
#     app: sup-ingress
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80


# ---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sup-micro-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/rewrites: "serviceName=sup-echo-app rewrite=/"
    nginx.org/rewrites: "serviceName=sup-hello-app rewrite=/"
spec:
  rules:
   - host: ab7c7612661594dc6ada53cbbb9ffe2a-1541276436.ap-southeast-1.elb.amazonaws.com
     http:
        paths:
          - path: /echo
            pathType: Exact
            backend:
              serviceName: sup-echo-svc
              servicePort: 80

          - path: /hello
            pathType: Exact
            backend:
              serviceName: sup-hello-svc
              servicePort: 80
